# user-service/src/main/java/jp/keio/acds/userservice/dto/UserCreate.java
@@ -15,16 +15,16 @@ import java.util.*;
 import javax.annotation.Generated;
 
 /**
- * StoreCreate
+ * UserCreate
  */
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-07-21T00:36:48.271+09:00[Asia/Tokyo]")
-public class StoreCreate {
+public class UserCreate {
 
   @JsonProperty("name")
   private String name;
 
-  public StoreCreate name(String name) {
+  public UserCreate name(String name) {
     this.name = name;
     return this;
   }
@@ -34,7 +34,7 @@ public class StoreCreate {
    * @return name
   */
   @NotNull 
-  @Schema(name = "name", example = "Miguels Conbini", required = true)
+  @Schema(name = "name", example = "Org", required = true)
   public String getName() {
     return name;
   }
@@ -51,8 +51,8 @@ public class StoreCreate {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    StoreCreate storeCreate = (StoreCreate) o;
-    return Objects.equals(this.name, storeCreate.name);
+    UserCreate userCreate = (UserCreate) o;
+    return Objects.equals(this.name, userCreate.name);
   }
 
   @Override
@@ -63,7 +63,7 @@ public class StoreCreate {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class StoreCreate {\n");
+    sb.append("class UserCreate {\n");
     sb.append("    name: ").append(toIndentedString(name)).append("\n");
     sb.append("}");
     return sb.toString();
